--- a/public/librarian-login.html
+++ b/public/librarian-login.html
@@ -21,6 +21,8 @@
     <a href="index.html">Search</a>
     <a href="student-login.html">Student Login</a>
     <a href="librarian-login.html">Librarian Login</a>
+    <a href="about.html">About</a>
+
     <a href="#" onclick="openDashboard()">Dashboard</a>
   </div>
 </div>
