--- a/public/student-login.html
+++ b/public/student-login.html
@@ -13,6 +13,8 @@
   <div class="nav-right" id="navMenu">
     <a href="index.html">Search</a>
     <a href="student-login.html">Student Login</a>
+    <a href="about.html">About</a>
+
    <a href="#" onclick="openDashboard()">Dashboard</a>
   </div>
 </div>
