--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     <a href="student-dashboard.html">My Account</a>
     <a href="librarian-login.html">Librarian Login</a>
     <a href="librarian-dashboard.html">Dashboard</a>
+    <a href="about.html">About</a>
+
   </div>
 </div>
 
