--- a/public/librarian-dashboard.html
+++ b/public/librarian-dashboard.html
@@ -17,6 +17,8 @@
     <a href="index.html">Search</a>
     <a href="student-login.html">Student Login</a>
     <a href="librarian-login.html">Librarian Login</a>
+    <a href="about.html">About</a>
+
     <a href="#" onclick="openDashboard()">Dashboard</a>
     <a href="#" onclick="logout()">Logout</a>
   </div>
