--- a/public/about.html
+++ b/public/about.html
@@ -7,6 +7,8 @@
 
 <body>
 
+  <div class="bg-wrap"></div>
+
   <!-- NAVBAR -->
   <div class="navbar">
     <div class="nav-left">BOOKHIVE</div>
@@ -55,7 +57,7 @@
       <strong>Amit Kumar 2024UGPI019</strong> <br>
       <strong>Alok Kumar 2024UGPI014</strong> 
       <br> <br>
-      ❤️ A project for college to simplify library systems.
+       A project for college to simplify library systems.
     </p>
 
   </div>
@@ -68,7 +70,7 @@
   </script>
 
   <footer class="footer">
-    <p>© 2025 BookHive — Created by Faraz Ahmad</p>
+    <p>© 2025 BookHive — Powered by NIT JSR</p>
   </footer>
 
 </body>
