--- a/public/student-dashboard.html
+++ b/public/student-dashboard.html
@@ -6,6 +6,7 @@
   </head>
   <body>
 
+  <div class="bg-wrap"></div>
     <div class="navbar">
       <div class="nav-left">BOOKHIVE</div>
       <div class="hamburger" onclick="toggleMenu()">☰</div>
