--- a/public/student-login.html
+++ b/public/student-login.html
@@ -7,6 +7,7 @@
 
 <body>
 
+  <div class="bg-wrap"></div>
 <div class="navbar">
   <div class="nav-left">BOOKHIVE</div>
   <div class="hamburger" onclick="toggleMenu()">☰</div>
