--- a/public/librarian-login.html
+++ b/public/librarian-login.html
@@ -10,7 +10,7 @@
   <div class="bg-wrap"></div>
 <!-- ✅ NAVBAR -->
 <div class="navbar">
-  <div class="nav-left">BOOKHIVE</div>
+  <div class="nav-left">NIT JSR BOOKHIVE</div>
 
   <!-- Hamburger Icon -->
   <div class="hamburger" onclick="toggleMenu()">
@@ -86,7 +86,7 @@ function login() {
 </script>
 
 <footer class="footer">
-  <p>© 2025 College Library Portal — Powered by NIT JSR</p>
+  <p>© 2025 NIT JSR BookHive — Powered by NIT JSR</p>
 </footer>
 
 
