--- a/public/about.html
+++ b/public/about.html
@@ -11,7 +11,7 @@
 
   <!-- NAVBAR -->
   <div class="navbar">
-    <div class="nav-left">BOOKHIVE</div>
+    <div class="nav-left">NIT JSR BOOKHIVE</div>
     <div class="hamburger" onclick="toggleMenu()">☰</div>
 
     <div class="nav-right" id="navMenu">
@@ -70,7 +70,7 @@
   </script>
 
   <footer class="footer">
-    <p>© 2025 BookHive — Powered by NIT JSR</p>
+    <p>© 2025 NIT-JSR BookHive — Powered by NIT JSR</p>
   </footer>
 
 </body>
