--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <!-- ✅ NAVBAR -->
 <div class="navbar">
-  <div class="nav-left">BOOKHIVE</div>
+  <div class="nav-left">NIT JSR BOOKHIVE</div>
 
   <!-- Hamburger Icon -->
   <div class="hamburger" onclick="toggleMenu()">
@@ -156,7 +156,7 @@ async function borrowBook(bookId) {
 
 
 <footer class="footer">
-  <p>© 2025 College Library Portal — Powered by NIT JSR</p>
+  <p>© 2025 NIT JSR BookHive — Powered by NIT JSR</p>
 </footer>
 
 
