--- a/public/librarian-dashboard.html
+++ b/public/librarian-dashboard.html
@@ -10,7 +10,7 @@
   <div class="bg-wrap"></div>
 <!-- ✅ NAVBAR -->
 <div class="navbar">
-  <div class="nav-left">BOOKHIVE</div>
+  <div class="nav-left">NIT JSR BOOKHIVE</div>
 
   <div class="hamburger" onclick="toggleMenu()">☰</div>
 
@@ -168,7 +168,7 @@ function logout() {
 }
 </script>
 <footer class="footer">
-  <p>© 2025 College Library Portal — Powered by NIT JSR</p>
+  <p>© 2025 NIT JSR BookHive — Powered by NIT JSR</p>
 </footer>
 
 </body>
