--- a/public/student-dashboard.html
+++ b/public/student-dashboard.html
@@ -8,7 +8,7 @@
 
   <div class="bg-wrap"></div>
     <div class="navbar">
-      <div class="nav-left">BOOKHIVE</div>
+      <div class="nav-left">NIT JSR BOOKHIVE</div>
       <div class="hamburger" onclick="toggleMenu()">☰</div>
       <div class="nav-right" id="navMenu">
         <a href="index.html">Search</a>
@@ -208,7 +208,7 @@ loadDashboard();
 
 
   <footer class="footer">
-    <p>© 2025 College Library Portal — Powered by NIT JSR</p>
+    <p>© 2025 NIT JSR BookHive — Powered by NIT JSR</p>
   </footer>
 
   </body>
